<resources>
    <string name="app_name">СъновникБГ - тълкуване на сънища</string>
    <string name="knowyourdreams">СЪНОВНИК</string>
    <string name="whatDream">Какво сънувахте?</string>
    <string name="myHistory">История</string>
    <string name="mySearch">Търсене</string>
    <string name="myFavourites">Любими</string>
    <string name="recent">ПОСЛЕДНО ТЪРСЕНИ</string>
    <string name="random">СЛУЧАЕН СЪН</string>
    <string name="copyDream">Копиране</string>
    <string name="empty">Историята е празна.</string>
    <string name="saved">ЗАПАЗЕНИ СЪНИЩА</string>
    <string name="empty2">Нямате запазени сънища.</string>
    <string name="toast">Натисете още веднъж за ИЗХОД.</string>
    <string name="addedToFavs">Добавено в Любими.</string>
    <string name="alreadyAdded">Сънят вече е добавен в Любими.</string>
    <string name="copied">Копирано!</string>
    <string name="reviewFail">Ревюто не беше публикувано!</string>
    <string name="noAdLoaded">Неуспешна реклама!</string>
</resources>