<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_700"
    android:scrollbars="none"
    tools:context=".history.HistoryFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@color/blue_700"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/amaticsc_bold"
                    android:gravity="center_horizontal"
                    android:paddingBottom="@dimen/_17sdp"
                    android:text="@string/knowyourdreams"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_31ssp"/>

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/historyLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@color/blue_700"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_linear"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_17sdp"
                    android:layout_marginLeft="@dimen/_17sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_17sdp"
                    android:layout_marginRight="@dimen/_17sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables,UselessParent">

                    <ImageView
                        android:id="@+id/iv_lastSearched"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:layout_weight="0.1"
                        app:srcCompat="@drawable/ic_time"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/tv_lastSearched"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.8"
                        android:fontFamily="@font/amaticsc_bold"
                        android:gravity="center_vertical"
                        android:text="@string/recent"
                        android:textColor="@color/teal_200"
                        android:textSize="@dimen/_24ssp" />

                    <ImageButton
                        android:id="@+id/delete_all_history"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="0.1"
                        android:background="@color/white"
                        android:scaleX="1.6"
                        android:scaleY="1.6"
                        app:srcCompat="@drawable/ic_delete"
                        tools:ignore="ContentDescription" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/historyCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/historyLinear"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="@dimen/_23sdp"
            android:layout_marginLeft="@dimen/_23sdp"
            android:layout_marginEnd="@dimen/_23sdp"
            android:layout_marginRight="@dimen/_23sdp"
            app:cardCornerRadius="@dimen/_20sdp"
            app:strokeColor="@color/teal_200"
            app:strokeWidth="@dimen/_2sdp">

            <TextView
                android:id="@+id/tv_emptyHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amaticsc_bold"
                android:gravity="center_horizontal"
                android:padding="@dimen/_5sdp"
                android:text="@string/empty"
                android:textAlignment="center"
                android:textColor="@color/blue_700"
                android:textSize="@dimen/_19ssp"
                android:visibility="gone"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/historyRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:scrollbars="none"
                tools:listitem="@layout/history_item_dream" />

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/historyLinear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/historyCardView"
            android:background="@color/blue_700"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_linear2"
                android:orientation="vertical">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_17sdp"
                    android:layout_marginLeft="@dimen/_17sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_17sdp"
                    android:layout_marginRight="@dimen/_17sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables,UselessParent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        app:srcCompat="@drawable/ic_arrow_forward"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/amaticsc_bold"
                        android:gravity="center_vertical"
                        android:text="@string/random"
                        android:textColor="@color/blue_700"
                        android:textSize="@dimen/_24ssp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/historyLinear2"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/bg_random_dream"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_12sdp"
                tools:ignore="UselessParent">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_23sdp"
                    android:layout_marginLeft="@dimen/_23sdp"
                    android:layout_marginEnd="@dimen/_23sdp"
                    android:layout_marginRight="@dimen/_23sdp"
                    app:cardBackgroundColor="@color/blue_700"
                    app:cardCornerRadius="@dimen/_20sdp"
                    app:strokeColor="@color/white"
                    app:strokeWidth="@dimen/_2sdp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/random_dream"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:fontFamily="@font/amaticsc_regular"
                            android:gravity="center"
                            android:padding="@dimen/_23sdp"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_31ssp"
                            android:textStyle="bold"
                            tools:text="Lorem Ipsum"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageButton
                                android:id="@+id/btn_copy"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/bg_button"
                                android:padding="@dimen/_12sdp"
                                app:srcCompat="@drawable/ic_copy"
                                tools:ignore="ContentDescription" />

                            <ImageButton
                                android:id="@+id/btn_share"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_23sdp"
                                android:layout_marginLeft="@dimen/_23sdp"
                                android:layout_marginEnd="@dimen/_23sdp"
                                android:layout_marginRight="@dimen/_23sdp"
                                android:background="@drawable/bg_button"
                                android:padding="@dimen/_12sdp"
                                app:srcCompat="@drawable/ic_share"
                                tools:ignore="ContentDescription" />

                            <ImageButton
                                android:id="@+id/btn_addtofavs"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/bg_button"
                                android:padding="@dimen/_12sdp"
                                app:srcCompat="@drawable/ic_inflated_star_full"
                                tools:ignore="ContentDescription" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/random_definition"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:fontFamily="@font/oswald_light"
                            android:gravity="center"
                            android:padding="@dimen/_23sdp"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_19ssp"
                            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."/>

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>